@@ -3044,4 +3044,8 @@ $1',
 'hebrew-calendar-m11-gen' => 'Av', # only translate this message to other languages if you have to change it
 'hebrew-calendar-m12-gen' => 'Elul', # only translate this message to other languages if you have to change it
 
+# Default signatures for all languages. Do not duplicate to other languages
+'signature' => '[[$1|$2]] ([[$3|$4]])', # default signature for registered users
+'signature-ip' => '[[$1|$2]] ([[$3|$4]])', # default signature for anonymous users
+
 );
